src/objects/Bugs__c.object
<CustomObject>
    <fields>
        <fullName>Closure_date__c</fullName>
        <description>Add Closure Date to resolve Issue</description>
        <inlineHelpText>Add Expected Closure Date to resolve Issue</inlineHelpText>
        <label>Expected Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTimeClosed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTimeOpened__c</fullName>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DefectDescription__c</fullName>
        <label>Defect Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DefectID__c</fullName>
        <displayFormat>SPED-{0000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DefectRaisedbyNokia__c</fullName>
        <description>Field is used to add the name from Nokia team who raised the bug.</description>
        <inlineHelpText>Field is used to add the name from Nokia team who raised the bug.</inlineHelpText>
        <label>Defect Raised by Nokia</label>
        <picklist>
            <picklistValues>
                <fullName>Anil Panicker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antonio Gameiro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Wang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Tan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henry Ge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kingshuk Banerji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Larmia, Tero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lovleen Chada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozammil Iqbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pankaj Soni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pankaj Trehan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pekka Hyvonen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Praveen C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raina, Rajesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandeep Bhardwaj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sirpa Kallio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sudhakar Rao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susila Cherla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tapio Uusikartano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ted Niedospial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wade Eagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yonghui Yao</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DefectSeverity__c</fullName>
        <label>Defect Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show Stopper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DefectStatus__c</fullName>
        <label>Defect Status</label>
        <picklist>
            <picklistValues>
                <fullName>New/Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected / Invalid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DefectSummary__c</fullName>
        <label>Defect Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DefectTestPhase__c</fullName>
        <label>Defect Test Phase</label>
        <picklist>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DefectType__c</fullName>
        <label>Defect Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Related Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com Platform Limitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usability Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Manual Update Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Assigned_To__c</fullName>
        <label>Defect Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Anil / Rajib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anil Panicker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep Banerjee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagar Wade / Kingshuk Benerji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaushik Ganguly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitish Sarawgi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parthasarathi Paul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satyajit Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sirpa Kallio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soma Giri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sudeshna Shaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Verma</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Detected_In_Release__c</fullName>
        <label>Defect Detected In Release</label>
        <picklist>
            <picklistValues>
                <fullName>Release 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE 2.0 Sprint 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE 2.0 Sprint 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Raised_By_Atos__c</fullName>
        <label>Defect Raised By Atos</label>
        <picklist>
            <picklistValues>
                <fullName>Anshuman Saha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajesh Kumar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rituparna Sengupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surya Banerjee</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Resolved_In_Release__c</fullName>
        <label>Defect Resolved In  Release</label>
        <picklist>
            <picklistValues>
                <fullName>Release 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE 2.0 Sprint 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE 2.0 Sprint 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Test_Case_Number__c</fullName>
        <label>Defect Test Case Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeveloperEmailAddress__c</fullName>
        <formula>IF( ISPICKVAL( Defect_Assigned_To__c,&quot;Saurabh Dua&quot; ), &quot;saurabh.dua@atos.net&quot;,&quot;piyush.parmar@atos.net&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developer Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Comments__c</fullName>
        <label>Developer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EstimatedEffort__c</fullName>
        <description>Estimated Effort (In Hrs.)</description>
        <inlineHelpText>Estimated Effort (In Hrs.)</inlineHelpText>
        <label>Estimated Effort (In Hrs.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>Consequence Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Adhoc Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Calculation Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Definition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Module Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scorecard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Scoring Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Tool Home Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Tracker Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sys_Previous_Status__c</fullName>
        <label>Sys Previous Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bugs</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bugs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>